--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img src="./images/logo.svg" alt="site logo">
         </a>
         <ul>
-            <li><a href="">About</a></li>
+            <li><a href="./about.html">About</a></li>
             <li><a href="">Services and prices</a></li>
             <li><a href="">Barbers</a></li>
             <li><a href="">Contacts</a></li>
@@ -25,8 +25,8 @@
     <main>
         <section>
             <ul>
-                <li class=""><a href=""target="_blank">Instagram</a></li>
-                <li class=""><a href=""target="_blank">Youtube</a></li>
+                <li class=""><a href=""target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
+                <li class=""><a href=""target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
             </ul>
             <p>A hair salon for men in Kyiv</p>
             <h1>BarberShop</h1>
