--- a/index.html
+++ b/index.html
@@ -33,6 +33,26 @@
             <p>We are experts in trendy men’s haircuts.
                 We work quickly, carefully and with style.</p>
         </section>
+        <section>
+            <ul>
+                <li>
+                    <img src="./images/about-1.jpg"
+                        alt="beard trimming" 
+                        width="270" 
+                        height="445">
+                </li>
+                <li>
+                    <img src="./images/about-2.jpg"
+                        alt="cutting the hair on the back of the head" width="270" 
+                        height="445">
+                </li>
+            </ul>
+            <p>About</p>
+            <h2>Best Barbershop in your city</h2>
+            <p>If you want to add more confidence to your image, you should definitely visit us.</p>
+            <p>We are a team that never stops at what has been achieved and are thirsty for changes. And when you fall into the hands of our master, you will never be the same again. We are a team that is always "on the same wave" with clients. Therefore, we are always ready to improve everyone who comes to us!</p>
+            <button type="button">Online-booking</button>
+        </section>
     </main>
     <footer></footer>
     </body>
