--- a/index.html
+++ b/index.html
@@ -53,6 +53,91 @@
             <p>We are a team that never stops at what has been achieved and are thirsty for changes. And when you fall into the hands of our master, you will never be the same again. We are a team that is always "on the same wave" with clients. Therefore, we are always ready to improve everyone who comes to us!</p>
             <button type="button">Online-booking</button>
         </section>
+        <section>
+            <p>Spend your time with the best masters</p>
+            <h2>Services and prices</h2>
+            <ul>
+                <li>
+                    <p>Men’s haircut</p>
+                    <p>from 300 uah.</p>
+                </li>
+                <li>
+                    <p>Beard trim</p>
+                    <p>rom 300 uah.</p>
+                </li>
+                <li>
+                    <p>Mustache trim</p>
+                    <p>from 200 uah.</p>
+                </li>
+                <li>
+                    <p>Straight razor shave</p>
+                    <p>from 200 uah.</p>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <p>Trainee’s haircut</p>
+                    <p>from 50 uah.</p>
+                </li>
+                <li>
+                    <p>Haircut under the nozzle</p>
+                    <p>from 200 uah.</p>
+                </li>
+                <li>
+                    <p>Children’s haircut (0-12 y.o.)</p>
+                    <p>from 300 uah.</p>
+                </li>
+                <li>
+                    <p>Camouflage of gray hair</p>
+                    <p>from 200 uah.</p>
+                </li>
+            </ul>
+            <button type="button">Online-booking</button>
+        </section>
+        <section>
+            <ul>
+                <li>
+                    <span>600</span>
+                    <p>Satisfied customers per day</p>
+                </li>
+                <li>
+                    <span>50</span>
+                    <p>Awards for excellent service</p>
+                </li>
+                <li>
+                    <span>20</span>
+                    <p>Kyiv’s best barbers</p>
+                </li>
+                <li>
+                    <span>100</span>
+                    <p>Gifts for regular customers</p>
+                </li>
+            </ul>
+            <p>Old traditional school</p>
+            <h2>¿Why people come to us?</h2>
+            <p>Only good things are said about us. But it's better to see and feel 1 time than read 10 times. </p>
+        </section>
+        <section>
+            <p>For true enjoyers of the atmosphere</p>
+            <h2>Our barbers</h2>
+            <ul>
+                <li>
+                    <img src="./images/our-barbers-1.jpg" alt="barber image" width="370" height="346">
+                    <h3>John Smith</h3>
+                    <p>Extreme Barber</p>
+                </li>
+                <li>
+                    <img src="./images/our-barbers-2.jpg" alt="barber image" width="370" height="346">
+                    <h3>Michele Doe</h3>
+                    <p>Extreme Barber</p>
+                </li>
+                <li>
+                    <img src="./images/our-barbers-3.jpg" alt="barber image" width="370" height="346">
+                    <h3>Alan Black</h3>
+                    <p>Extreme Barber</p>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer></footer>
     </body>
