Adds html several sections and map
Прихований заголовок через hidden в подальшому буде змінено через css, тому що google пошук також не бачить це приховання.
Карта прописана двома методами через address та iframe- показує повноціну карту, окрема вбудована сторінка html в html.

--- a/index.html
+++ b/index.html
@@ -138,6 +138,60 @@
                 </li>
             </ul>
         </section>
+        <section>
+            <p>In Latin, "barba" means "beard"</p>
+            <h2 hidden>Прихований заголовок, який вказується в ТЗ або СЄО</h2>
+            <ul>
+                <li>
+                    <img 
+                        src="./images/gallery-1.jpg" 
+                        alt="barber work" 
+                        width="270" 
+                        height="360"></li>
+                <li>
+                    <img 
+                        src="./images/gallery-2.jpg" 
+                        alt="barber work" 
+                        width="270" 
+                        height="360"></li>
+                <li>
+                    <img 
+                        src="./images/gallery-3.jpg" 
+                        alt="barber work"
+                        width="270" 
+                        height="360"></li>
+                <li>
+                    <img 
+                        src="./images/gallery-4.jpg" 
+                        alt="barber work" 
+                        width="270" 
+                        height="360"></li>
+            </ul>
+        </section>
+        <section>
+            <h2>Online-booking</h2>
+        </section>
+        <section>
+            <h2>Contacts</h2>
+            <address>
+                <ul>
+                    <li><a href="https://goo.gl/maps/u3ejC7YD4NgELc2P7">st. Vasilkivska, 7A <br/>
+                        Kyiv, 08132</a></li>
+                    <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
+                    <li><a href="mailto:barbershop@email.com">barbershop@email.com</a></li>
+                </ul>
+            </address>
+            <p>Working hours</p>
+            <p>Every day from 9:00 to 22:00</p>
+        </section>
+        <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d40678.685292249895!2d30.466953294283183!3d50.41468636851055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4c8dac50037a1%3A0x9dad93ceab79f6e2!2z0JLQsNGB0LjQu9GM0LrQvtCy0YHQutCw0Y8!5e0!3m2!1sru!2sua!4v1680511416266!5m2!1sru!2sua" 
+        width="600" 
+        height="450" 
+        style="border:0;" 
+        allowfullscreen="" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
     <footer></footer>
     </body>
