--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barbershop</title>
+    <title>&#128136; Barbershop</title>
     </head>
     <body>
     <header>
@@ -25,8 +25,8 @@
     <main>
         <section>
             <ul>
-                <li class=""><a href=""target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
-                <li class=""><a href=""target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
+                <li class=""><a href="" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
+                <li class=""><a href="" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
             </ul>
             <p>A hair salon for men in Kyiv</p>
             <h1>BarberShop</h1>
@@ -193,6 +193,12 @@
         loading="lazy" 
         referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
-    <footer></footer>
+    <footer>
+        <p>&copy;Copyright 2020</p>
+        <ul>
+            <li class=""><a href="" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
+            <li class=""><a href="" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
+        </ul>
+    </footer>
     </body>
 </html>
