--- a/index.html
+++ b/index.html
@@ -11,182 +11,231 @@
     <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
-    <header>
-        <nav>
-        <a href="">
-            <img src="./images/logo.svg" alt="site logo">
+        <!-------------------- SECTION HEADER ----------------->
+    <header class="header">
+        <nav class="header-nav">
+        <a class="header-link-logo" href="">
+            <img class="header-logo" src="./images/logo.svg" alt="site logo">
         </a>
-        <ul>
-            <li><a href="./about.html">About</a></li>
-            <li><a href="">Services and prices</a></li>
-            <li><a href="">Barbers</a></li>
-            <li><a href="">Contacts</a></li>
+        <ul class="header-list">
+            <li class="header-item">
+                <a class="header-link" href="./about.html">About</a>
+            </li>
+            <li class="header-item">
+                <a class="header-link" href="">Services and prices</a>
+            </li> 
+            <li class="header-item">
+                <a class="header-link" href="">Barbers</a>
+            </li>
+            <li class="header-item">
+                <a class="header-link" href="">Contacts</a>
+            </li>
         </ul>
         </nav>
-        <a href="tel:+380441111111">+38 044 111 11 11</a>
-        <button type="button">Online-booking</button>
+        <a class="header-tel" href="tel:+380441111111">+38 044 111 11 11</a>
+        <button class="header-btn" type="button">Online-booking</button>
     </header>
+
     <main>
-        <section>
-            <ul>
-                <li class=""><a href="" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
-                <li class=""><a href="" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
+        <!------------------------SECTION HERO  ---------------------- -->
+        <section class="hero">
+            <ul class="hero-list">
+                <li class="hero-item">
+                    <a class="hero-link" href="" target="_blank" rel="noopener noreferrer nofollow">Instagram</a>
+                </li>
+                <li class="hero-item">
+                    <a class="hero-link" href="" target="_blank" rel="noopener noreferrer nofollow">Youtube</a>
+                </li>
             </ul>
-            <p>A hair salon for men in Kyiv</p>
-            <h1>BarberShop</h1>
-            <p>We are experts in trendy men’s haircuts.
+            <p class="hero-subtitle">A hair salon for men in Kyiv</p>
+            <h1 class="hero-title">BarberShop</h1>
+            <p class="hero-suptitle">We are experts in trendy men’s haircuts.
                 We work quickly, carefully and with style.</p>
         </section>
-        <section>
-            <ul>
-                <li>
-                    <img src="./images/about-1.jpg"
+        <!--------------------------  SECTION ABOUT --------------------->
+        <section class="about">
+            <ul class="about-list">
+                <li class="about-item">
+                    <img 
+                        class="about-img" 
+                        src="./images/about-1.jpg"
                         alt="beard trimming" 
                         width="270" 
                         height="445">
                 </li>
-                <li>
-                    <img src="./images/about-2.jpg"
+                <li class="about-item">
+                    <img 
+                        class="about-img" 
+                        src="./images/about-2.jpg"
                         alt="cutting the hair on the back of the head" width="270" 
                         height="445">
                 </li>
             </ul>
-            <p>About</p>
-            <h2>Best Barbershop in your city</h2>
-            <p>If you want to add more confidence to your image, you should definitely visit us.</p>
-            <p>We are a team that never stops at what has been achieved and are thirsty for changes. And when you fall into the hands of our master, you will never be the same again. We are a team that is always "on the same wave" with clients. Therefore, we are always ready to improve everyone who comes to us!</p>
-            <button type="button">Online-booking</button>
+            <p class="about-subtitle">About</p>
+            <h2 class="about-title">Best Barbershop in your city</h2>
+            <p class="about-suptitle">If you want to add more confidence to your image, you should definitely visit us.</p>
+            <p class="about-desc">We are a team that never stops at what has been achieved and are thirsty for changes. And when you fall into the hands of our master, you will never be the same again. We are a team that is always "on the same wave" with clients. Therefore, we are always ready to improve everyone who comes to us!</p>
+            <button class="about-btn" type="button">Online-booking</button>
         </section>
-        <section>
-            <p>Spend your time with the best masters</p>
-            <h2>Services and prices</h2>
-            <ul>
-                <li>
-                    <p>Men’s haircut</p>
-                    <p>from 300 uah.</p>
+        <!--------------------------SECTION PRICE ---------------------->
+        <section class="price">
+            <p class="price-subtitle">Spend your time with the best masters</p>
+            <h2 class="price-title">Services and prices</h2>
+            <ul class="price-list">
+                <li class="price-item">
+                    <p class="price-text">Men’s haircut</p>
+                    <p class="price-desc">from 300 uah.</p>
                 </li>
-                <li>
-                    <p>Beard trim</p>
-                    <p>rom 300 uah.</p>
+                <li class="price-item">
+                    <p class="price-text">Beard trim</p>
+                    <p class="price-desc">rom 300 uah.</p>
                 </li>
-                <li>
-                    <p>Mustache trim</p>
-                    <p>from 200 uah.</p>
+                <li class="price-item">
+                    <p class="price-text">Mustache trim</p>
+                    <p class="price-desc">from 200 uah.</p>
                 </li>
-                <li>
-                    <p>Straight razor shave</p>
-                    <p>from 200 uah.</p>
+                <li class="price-item">
+                    <p class="price-text">Straight razor shave</p>
+                    <p class="price-desc">from 200 uah.</p>
                 </li>
             </ul>
-            <ul>
-                <li>
-                    <p>Trainee’s haircut</p>
-                    <p>from 50 uah.</p>
+            <ul class="price-list">
+                <li class="price-item">
+                    <p class="price-text">Trainee’s haircut</p>
+                    <p class="price-desc">from 50 uah.</p>
                 </li>
-                <li>
-                    <p>Haircut under the nozzle</p>
-                    <p>from 200 uah.</p>
+                <li class="price-item">
+                    <p class="price-text">Haircut under the nozzle</p>
+                    <p class="price-desc">from 200 uah.</p>
                 </li>
-                <li>
-                    <p>Children’s haircut (0-12 y.o.)</p>
-                    <p>from 300 uah.</p>
+                <li class="price-item">
+                    <p class="price-text">Children’s haircut (0-12 y.o.)</p>
+                    <p class="price-desc">from 300 uah.</p>
                 </li>
-                <li>
-                    <p>Camouflage of gray hair</p>
-                    <p>from 200 uah.</p>
-                </li>
-            </ul>
-            <button type="button">Online-booking</button>
-        </section>
-        <section>
-            <ul>
-                <li>
-                    <span>600</span>
-                    <p>Satisfied customers per day</p>
-                </li>
-                <li>
-                    <span>50</span>
-                    <p>Awards for excellent service</p>
-                </li>
-                <li>
-                    <span>20</span>
-                    <p>Kyiv’s best barbers</p>
-                </li>
-                <li>
-                    <span>100</span>
-                    <p>Gifts for regular customers</p>
+                <li class="price-item">
+                    <p class="price-text">Camouflage of gray hair</p>
+                    <p class="price-desc">from 200 uah.</p>
                 </li>
             </ul>
-            <p>Old traditional school</p>
-            <h2>¿Why people come to us?</h2>
-            <p>Only good things are said about us. But it's better to see and feel 1 time than read 10 times. </p>
+            <button class="price-btn" type="button">Online-booking</button>
         </section>
-        <section>
-            <p>For true enjoyers of the atmosphere</p>
-            <h2>Our barbers</h2>
-            <ul>
-                <li>
-                    <img src="./images/our-barbers-1.jpg" alt="barber image" width="370" height="346">
-                    <h3>John Smith</h3>
-                    <p>Extreme Barber</p>
+        <!---------------------------  WHY WE -------------------------->
+        <section class="advantages">
+            <ul class="advantages-list">
+                <li class="advantages-item">
+                    <span class="advantages-sub">600</span>
+                    <p class="advantages-desc">Satisfied customers per day</p>
                 </li>
-                <li>
-                    <img src="./images/our-barbers-2.jpg" alt="barber image" width="370" height="346">
-                    <h3>Michele Doe</h3>
-                    <p>Extreme Barber</p>
+                <li class="advantages-item">
+                    <span class="advantages-sub">50</span>
+                    <p class="advantages-desc">Awards for excellent service</p>
                 </li>
-                <li>
-                    <img src="./images/our-barbers-3.jpg" alt="barber image" width="370" height="346">
-                    <h3>Alan Black</h3>
-                    <p>Extreme Barber</p>
+                <li class="advantages-item">
+                    <span class="advantages-sub">20</span>
+                    <p class="advantages-desc">Kyiv’s best barbers</p>
+                </li>
+                <li class="advantages-item">
+                    <span class="advantages-sub">100</span>
+                    <p class="advantages-desc">Gifts for regular customers</p>
                 </li>
             </ul>
+            <p class="advantages-subtitle">Old traditional school</p>
+            <h2 class="advantages-title">¿Why people come to us?</h2>
+            <p class="advantages-text">Only good things are said about us. But it's better to see and feel 1 time than read 10 times. </p>
         </section>
-        <section>
-            <p>In Latin, "barba" means "beard"</p>
-            <h2 hidden>Прихований заголовок, який вказується в ТЗ або СЄО</h2>
-            <ul>
-                <li>
+        <!----------------------------SECTION BARBERS -->
+        <section class="barbers">
+            <p class="barbers-subtitle">For true enjoyers of the atmosphere</p>
+            <h2 class="barbers-title">Our barbers</h2>
+            <ul class="barbers-list">
+                <li class="barbers-item">
+                    <img
+                        class="barbers-img"
+                        src="./images/our-barbers-1.jpg"
+                        alt="barber image"
+                        width="370" 
+                        height="346">
+                    <h3 class="barbers-name">John Smith</h3>
+                    <p class="barbers-text">Extreme Barber</p>
+                </li>
+                <li class="barbers-item">
                     <img 
+                        class="barbers-img"
+                        src="./images/our-barbers-2.jpg" 
+                        alt="barber image" 
+                        width="370" 
+                        height="346">
+                    <h3 class="barbers-name">Michele Doe</h3>
+                    <p class="barbers-text">Extreme Barber</p>
+                </li>
+                <li class="barbers-item">
+                    <img 
+                        class="barbers-img"
+                        src="./images/our-barbers-3.jpg" 
+                        alt="barber image" 
+                        width="370" 
+                        height="346">
+                    <h3 class="barbers-name">Alan Black</h3>
+                    <p class="barbers-text">Extreme Barber</p>
+                </li>
+            </ul>
+        </section>
+        <!-------------------------  SECTION PORTFOLIO --------------->
+        <section class="portfolio">
+            <p class="portfolio-subtitle">In Latin, "barba" means "beard"</p>
+            <h2 class="portfolio-hidden" hidden>Прихований заголовок, який вказується в ТЗ або СЄО</h2>
+            <ul class="portfolio-list">
+                <li class="portfolio-item">
+                    <img 
+                        class="portfolio-img"
                         src="./images/gallery-1.jpg" 
                         alt="barber work" 
                         width="270" 
                         height="360"></li>
-                <li>
+                <li class="portfolio-item">
                     <img 
+                        class="portfolio-img"
                         src="./images/gallery-2.jpg" 
                         alt="barber work" 
                         width="270" 
                         height="360"></li>
-                <li>
+                <li class="portfolio-item">
                     <img 
+                        class="portfolio-img"
                         src="./images/gallery-3.jpg" 
                         alt="barber work"
                         width="270" 
                         height="360"></li>
-                <li>
+                <li class="portfolio-item">
                     <img 
+                        class="portfolio-img"
                         src="./images/gallery-4.jpg" 
                         alt="barber work" 
                         width="270" 
                         height="360"></li>
             </ul>
         </section>
-        <section>
-            <h2>Online-booking</h2>
+        <!---------------------  SECTION BOOKING ----------------------->
+        <section class="booking">
+            <h2 class="booking-title">Online-booking</h2>
         </section>
-        <section>
-            <h2>Contacts</h2>
+        <!---------------------  SECTION CONTACTS ---------------------->
+        <section class="contacts">
+            <h2 class="contacts-title">Contacts</h2>
             <address>
-                <ul>
-                    <li><a href="https://goo.gl/maps/u3ejC7YD4NgELc2P7">st. Vasilkivska, 7A <br/>
-                        Kyiv, 08132</a></li>
-                    <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
-                    <li><a href="mailto:barbershop@email.com">barbershop@email.com</a></li>
+                <ul class="contacts-list">
+                    <li class="contacts-item">
+                        <a href="https://goo.gl/maps/u3ejC7YD4NgELc2P7">st. Vasilkivska, 7A <br/>
+                        Kyiv, 08132</a>
+                    </li>
+                    <li class="contacts-item">
+                        <a href="tel:+380441111111">+38 044 111 11 11</a></li>
+                    <li class="contacts-item">
+                        <a href="mailto:barbershop@email.com">barbershop@email.com</a></li>
                 </ul>
             </address>
-            <p>Working hours</p>
-            <p>Every day from 9:00 to 22:00</p>
+            <p class="contacts-text">Working hours</p>
+            <p class="contacts-desc">Every day from 9:00 to 22:00</p>
         </section>
         <iframe 
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d40678.685292249895!2d30.466953294283183!3d50.41468636851055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4c8dac50037a1%3A0x9dad93ceab79f6e2!2z0JLQsNGB0LjQu9GM0LrQvtCy0YHQutCw0Y8!5e0!3m2!1sru!2sua!4v1680511416266!5m2!1sru!2sua" 
@@ -197,11 +246,15 @@
         loading="lazy" 
         referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
-    <footer>
-        <p>&copy;Copyright 2020</p>
-        <ul>
-            <li class=""><a href="" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
-            <li class=""><a href="" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
+    <!-----------------------  SECTION FOOTER -------------------------->
+    <footer class="footer">
+        <p class="footer-text">&copy;Copyright 2020</p>
+        <ul class="footer-list">
+            <li class="footer-item">
+                <a href="" target="_blank" rel="noopener noreferrer nofollow">Instagram</a>
+            </li>
+            <li class="footer-item">
+                <a href="" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
         </ul>
     </footer>
     </body>
