Add css to header

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
         <a class="header-link-logo" href="">
             <img class="header-logo" src="./images/logo.svg" alt="site logo">
         </a>
-        <ul class="header-list">
+        <ul class="header-list list">
             <li class="header-item">
-                <a class="header-link" href="./about.html">About</a>
+                <a class="header-link link" href="./about.html">About</a>
             </li>
             <li class="header-item">
-                <a class="header-link" href="">Services and prices</a>
+                <a class="header-link link" href="">Services and prices</a>
             </li> 
             <li class="header-item">
-                <a class="header-link" href="">Barbers</a>
+                <a class="header-link link" href="">Barbers</a>
             </li>
             <li class="header-item">
-                <a class="header-link" href="">Contacts</a>
+                <a class="header-link link" href="">Contacts</a>
             </li>
         </ul>
         </nav>
-        <a class="header-tel" href="tel:+380441111111">+38 044 111 11 11</a>
+        <a class="header-tel link" href="tel:+380441111111">+38 044 111 11 11</a>
         <button class="header-btn" type="button">Online-booking</button>
     </header>
 
